--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -28,6 +28,16 @@
     margin-left: 20px;
     color:  rgb(114, 175, 236);
   }
+
+  .input2{
+    width: 450px;
+    height: 50px;
+    border-radius: 8px;
+    background-color: white;
+    margin-left: 20px;
+    color:  rgb(114, 175, 236);
+  }
+
   
   .button{
     background-color: transparent;
